force-app/main/default/objects/Contact/fields/Orphan_EnrolmentYear__c.field-meta.xml
<CustomField>
    <fullName>Orphan_EnrolmentYear__c</fullName>
    <label>Enrolment Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>