force-app/main/default/objects/Contact/fields/Orphan_Father_Death_Certificate_Checked__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Father_Death_Certificate_Checked__c</fullName>
    <label>Is Father Death Certificate Checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>