force-app/main/default/objects/Contact/fields/Orphan_Father_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Father_Last_Name__c</fullName>
    <label>Father Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>