force-app/main/default/objects/Contact/fields/Orphan_Fathers_Cause_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Fathers_Cause_Of_Death__c</fullName>
    <label>Fathers Cause Of Death</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Heart Attack</fullName>
            </value>
            <value>
                <fullName>Heart Failure</fullName>
            </value>
            <value>
                <fullName>Heat Stroke</fullName>
            </value>
            <value>
                <fullName>Hepatitis</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Kidney Failure</fullName>
            </value>
            <value>
                <fullName>Killed</fullName>
            </value>
            <value>
                <fullName>Liver Failure</fullName>
            </value>
            <value>
                <fullName>Natural Causes</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>Undetermined Causes</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>War</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>