force-app/main/default/objects/Contact/fields/Orphan_Fathers_Date_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Fathers_Date_Of_Death__c</fullName>
    <label>Fathers Date Of Death</label>
    <type>Date</type>
</CustomField>