force-app/main/default/objects/Contact/fields/Orphan_Fathers_Death_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Fathers_Death_Verification_Method__c</fullName>
    <label>Fathers Death Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death Certificate</fullName>
            </value>
            <value>
                <fullName>Field Office</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>