force-app/main/default/objects/Contact/fields/Orphan_GeneralHealth__c.field-meta.xml
<CustomField>
    <fullName>Orphan_GeneralHealth__c</fullName>
    <label>General Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Treatment Needed</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>