force-app/main/default/objects/Contact/fields/Orphan_Is_Mother_Alive__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Is_Mother_Alive__c</fullName>
    <label>Is Mother Alive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>