force-app/main/default/objects/Contact/fields/Orphan_Means_Of_Support__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Means_Of_Support__c</fullName>
    <label>Means Of Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charitable Donations</fullName>
            </value>
            <value>
                <fullName>Community Support</fullName>
            </value>
            <value>
                <fullName>Family Support</fullName>
            </value>
            <value>
                <fullName>Friends Support</fullName>
            </value>
            <value>
                <fullName>Handouts</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Neighbours Support</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Temporary Work</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>