force-app/main/default/objects/Contact/fields/Orphan_Mother_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Mother_First_Name__c</fullName>
    <label>Mother First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>