force-app/main/default/objects/Contact/fields/Orphan_Mother_Not_Guardian_Reason__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Mother_Not_Guardian_Reason__c</fullName>
    <label>Mother Not Guardian Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother Lives Elsewhere</fullName>
            </value>
            <value>
                <fullName>Mother Unwell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>