force-app/main/default/objects/Contact/fields/Orphan_Mothers_Date_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Mothers_Date_Of_Death__c</fullName>
    <label>Mothers Date Of Death</label>
    <type>Date</type>
</CustomField>