force-app/main/default/objects/Contact/fields/Orphan_OverallGrade__c.field-meta.xml
<CustomField>
    <fullName>Orphan_OverallGrade__c</fullName>
    <label>Overall Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>