force-app/main/default/objects/Contact/fields/Orphan_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Photo_URL__c</fullName>
    <label>Orphan Photo URL</label>
    <type>Url</type>
</CustomField>