force-app/main/default/objects/Contact/fields/Orphan_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Profile_URL__c</fullName>
    <label>Orphan Profile URL</label>
    <type>Url</type>
</CustomField>