force-app/main/default/objects/Contact/fields/Orphan_Transport_To_School__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Transport_To_School__c</fullName>
    <label>Transport To School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bicycle</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Minibus</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Private Transport</fullName>
            </value>
            <value>
                <fullName>Public Bus</fullName>
            </value>
            <value>
                <fullName>Rickshaw</fullName>
            </value>
            <value>
                <fullName>School Bus</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Walks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>