force-app/main/default/objects/Contact/fields/Orphan_Visit__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orphan Visit</label>
    <referenceTo>Orphan_Visit__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>