force-app/main/default/objects/Contact/fields/Other_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_Photo_URL__c</fullName>
    <formula>Orphan_Visit__r.Other_Photo_URL__c</formula>
    <label>Other Photo URL</label>
    <type>Text</type>
</CustomField>