force-app/main/default/objects/Contact/fields/Owner_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Code__c</fullName>
    <formula>Text(Owner.Payment_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region Code</label>
    <type>Text</type>
</CustomField>