force-app/main/default/objects/Contact/fields/Ph_Only_1_field_is_pop__c.field-meta.xml
<CustomField>
    <fullName>Ph_Only_1_field_is_pop__c</fullName>
    <formula>AND (NOT (Phones_are_different__c = True),
     OR ( 
     AND (
          !ISBLANK(Phone),
          Phone != MobilePhone,
          Phone != npe01__WorkPhone__c,
          Phone != HomePhone
         ),

    AND (
          !ISBLANK(MobilePhone),
          MobilePhone != Phone,
          MobilePhone != npe01__WorkPhone__c,
          MobilePhone != HomePhone
         ),

    AND (
           !ISBLANK(npe01__WorkPhone__c),
           npe01__WorkPhone__c != MobilePhone,
           npe01__WorkPhone__c != Phone,
           npe01__WorkPhone__c != HomePhone
     ),

    AND (
          !ISBLANK(HomePhone),
          HomePhone != MobilePhone,
          HomePhone != npe01__WorkPhone__c,
          HomePhone != Phone
         )
    )
   )</formula>
    <label>Ph Only 1 field is pop</label>
    <type>Checkbox</type>
</CustomField>