force-app/main/default/objects/Contact/fields/Phones_are_different__c.field-meta.xml
<CustomField>
    <fullName>Phones_are_different__c</fullName>
    <formula>OR (
    AND (
          !ISBLANK(Phone),
          OR ( AND ( !ISBLANK(MobilePhone),
                     Phone != MobilePhone
                    ),
               AND ( !ISBLANK(npe01__WorkPhone__c),
                     Phone != npe01__WorkPhone__c
                    ),
               AND ( !ISBLANK(HomePhone),
                     Phone != HomePhone
                    )
              )


    
          ),

     AND (
          !ISBLANK(MobilePhone),
          OR ( AND ( !ISBLANK(npe01__WorkPhone__c),
                     MobilePhone != npe01__WorkPhone__c
                    ),
               AND ( !ISBLANK(HomePhone),
                     MobilePhone != HomePhone
                    )

              )

    
          ),
     AND (
          !ISBLANK(npe01__WorkPhone__c),
           AND ( !ISBLANK(HomePhone),
                     npe01__WorkPhone__c != HomePhone
                    )
              

    
          )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phones are different</label>
    <type>Checkbox</type>
</CustomField>