force-app/main/default/objects/Contact/fields/Phones_are_Dupes__c.field-meta.xml
<CustomField>
    <fullName>Phones_are_Dupes__c</fullName>
    <formula>AND (Phones_are_different__c= False,
OR (
    AND (
          !ISBLANK(Phone),
          !ISBLANK(MobilePhone),
          Phone= MobilePhone
         ),

    AND (
          !ISBLANK(MobilePhone),
          !ISBLANK(npe01__WorkPhone__c),
          MobilePhone= npe01__WorkPhone__c
         ),

    AND (
          !ISBLANK(npe01__WorkPhone__c),
          !ISBLANK(HomePhone),
          npe01__WorkPhone__c= HomePhone
         ),

    AND (
          !ISBLANK(HomePhone),
          !ISBLANK(Phone),
          HomePhone= Phone
         )

   )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phones are Dupes</label>
    <type>Checkbox</type>
</CustomField>