force-app/main/default/objects/Contact/fields/Products_purchased__c.field-meta.xml
<CustomField>
    <fullName>Products_purchased__c</fullName>
    <label>Products purchased</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>