force-app/main/default/objects/Contact/fields/Profile_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_URL__c</fullName>
    <formula>Orphan_Visit__r.Profile_Photo_URL__c</formula>
    <label>Profile Photo URL</label>
    <type>Text</type>
</CustomField>