force-app/main/default/objects/Contact/fields/Project_Support_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Project_Support_Deduction__c</fullName>
    <description>A specific deduction percentage for project support applied on donations from the specific contact this value is assigned to.</description>
    <label>Project Support Deduction</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>