force-app/main/default/objects/Contact/fields/Reason_for_leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_leaving__c</fullName>
    <description>Reason for leaving of volunteer</description>
    <label>Reason for leaving</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unhappy with volunteer experience</fullName>
            </value>
            <value>
                <fullName>Misconduct</fullName>
            </value>
            <value>
                <fullName>New employment</fullName>
            </value>
            <value>
                <fullName>New employment with Human Appeal</fullName>
            </value>
            <value>
                <fullName>No time to volunteer</fullName>
            </value>
            <value>
                <fullName>Other commitments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>