force-app/main/default/objects/Contact/fields/Receipt_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Via_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to map DMS</description>
    <label>Receipt Via Email</label>
    <type>Checkbox</type>
</CustomField>