force-app/main/default/objects/Contact/fields/Reference_01__c.field-meta.xml
<CustomField>
    <fullName>Reference_01__c</fullName>
    <description>First Reference Status</description>
    <label>Reference 01</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Chased</fullName>
            </value>
            <value>
                <fullName>New referee details requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>