force-app/main/default/objects/Contact/fields/Reference_01_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_01_Date__c</fullName>
    <description>Date for any activity for reference 01</description>
    <label>Reference 01 Date</label>
    <type>Date</type>
</CustomField>