force-app/main/default/objects/Contact/fields/Reference_02_Date__c.field-meta.xml
<CustomField>
    <fullName>Reference_02_Date__c</fullName>
    <label>Reference 02 Date</label>
    <type>Date</type>
</CustomField>