force-app/main/default/objects/Contact/fields/Regional_Office_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office_Site_Code__c</fullName>
    <label>Regional Office Site Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>