force-app/main/default/objects/Contact/fields/Reserves_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Reserves_Deduction__c</fullName>
    <description>A specific deduction percentage for administration applied on donations from the specific contact this value is assigned to.</description>
    <label>Reserves Deduction</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>