force-app/main/default/objects/Contact/fields/Resubscribed__c.field-meta.xml
<CustomField>
    <fullName>Resubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Contact had previously been Opted Out of Email and is now Opted In.</description>
    <label>Resubscribed</label>
    <type>Checkbox</type>
</CustomField>