force-app/main/default/objects/Contact/fields/School_Status__c.field-meta.xml
<CustomField>
    <fullName>School_Status__c</fullName>
    <formula>If(Sponsoree_Not_In_School__c = true, &apos;Not In School&apos;,&apos;In School&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Status</label>
    <type>Text</type>
</CustomField>