force-app/main/default/objects/Contact/fields/SharinPix_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>SharinPix_Photo_URL__c</fullName>
    <label>SharinPix Photo URL</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>