force-app/main/default/objects/Contact/fields/SMS_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_Date__c</fullName>
    <label>SMS Opt Out Date</label>
    <type>Date</type>
</CustomField>