force-app/main/default/objects/Contact/fields/SMS_Preference_declared__c.field-meta.xml
<CustomField>
    <fullName>SMS_Preference_declared__c</fullName>
    <label>SMS Preference declared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Means_of_preference_declaration</valueSetName>
    </valueSet>
</CustomField>