force-app/main/default/objects/Contact/fields/Socio__c.field-meta.xml
<CustomField>
    <fullName>Socio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Socio</label>
    <type>Checkbox</type>
</CustomField>