force-app/main/default/objects/Contact/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Donor_SF_ID_Sponsor__c, Sponsor_Name__c ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor</label>
    <type>Text</type>
</CustomField>