force-app/main/default/objects/Contact/fields/Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Name__c</fullName>
    <label>Sponsor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>