force-app/main/default/objects/Contact/fields/Sponsor_SupportorDMS__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_SupportorDMS__c</fullName>
    <label>Sponsor Supporters_DMS_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>