force-app/main/default/objects/Contact/fields/Sponsoree_Best_Friend_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_Best_Friend_Name__c</fullName>
    <label>Best Friend Name</label>
    <type>TextArea</type>
</CustomField>