force-app/main/default/objects/Contact/fields/Sponsoree_Canonical_Id__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_Canonical_Id__c</fullName>
    <description>Original Id of sponsoree generated in field system, before syncing it to regional instances.</description>
    <label>Canonical Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>