force-app/main/default/objects/Contact/fields/Sponsoree_Field_Office_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_Field_Office_Reference__c</fullName>
    <description>Code or reference that represents a field office.</description>
    <label>Field Office Reference</label>
    <type>TextArea</type>
</CustomField>