force-app/main/default/objects/Contact/fields/Sponsoree_Has_Disability__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_Has_Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if a sponsoree has a disability.</description>
    <label>Has Disability</label>
    <type>Checkbox</type>
</CustomField>