force-app/main/default/objects/Contact/fields/Sponsoree_ID__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_ID__c</fullName>
    <description>Readable Id for Sponsoree contact, includes historical Id&apos;s as well.</description>
    <externalId>true</externalId>
    <label>Sponsoree ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>