force-app/main/default/objects/Contact/fields/Sponsoree_Import_Batch__c.field-meta.xml
<CustomField>
    <fullName>Sponsoree_Import_Batch__c</fullName>
    <description>Specifies batch number used to import sponsoree data from field instance to region instance.</description>
    <label>Import Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>